+ special class for gpt image to fix spacing issue

--- a/blogs/blogpage.css
+++ b/blogs/blogpage.css
@@ -90,7 +90,8 @@ header ul li a:hover {
 }
 
 .blog-image-gpt {
-    
+    width: 20%;
+    margin-right: 10px;
 }
 
 .blog-post a:hover {
